# zkHotdog

./: .gitmodules  CLAUDE.md  README.md  start_local_environment.sh
ios/: README.md
ios/zkHotdog/: Info.plist  MeasurementViewController.swift  ViewController.swift
ios/zkHotdog.xcodeproj/: project.pbxproj
ios/zkHotdogTests/: zkHotdogTests.swift
ios/zkHotdogUITests/: zkHotdogUITests.swift
zkHotdog/: AppDelegate.swift
zkHotdog.xcodeproj/: project.pbxproj
zkHotdog.xcodeproj/xcuserdata/andoroid.xcuserdatad/xcschemes/: xcschememanagement.plist
zkHotdogUITests/: zkHotdogUITestsLaunchTests.swift
zkhotdog/: package-lock.json  package.json
zkp/: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  README.md  docker-compose.yml  install_and_build.sh  package.json  test_api.sh  test_proof.sh  tsconfig.json
zkp/build_scripts/: rebuild_circuit.sh
zkp/circuit/: zkHotdog.circom
zkp/circuit-compiled/: zkHotdog.r1cs  zkHotdog.sym
zkp/circuit-compiled/zkHotdog_js/: zkHotdog.wasm
zkp/src/: main.rs  verify_client.ts
